--- a/item.html
+++ b/item.html
@@ -21,7 +21,7 @@
         <ul>Welcome admin | Log Out</ul>
     </nav> -->
     <div class="list">
-        <a href="item.html">Item</a><br>
+        <a href="">Item</a><br>
         <a href="">Purchase</a><br>
         <a href="">Vendor</a><br>
         <a href="">Sale</a><br>
