--- a/vendor.html
+++ b/vendor.html
@@ -21,9 +21,9 @@
         <ul>Welcome admin | Log Out</ul>
     </nav> -->
     <div class="list">
-        <a href="">Item</a><br>
+        <a href="item.html">Item</a><br>
         <a href="purchase.html">Purchase</a><br>
-        <a href="vendor.html">Vendor</a><br>
+        <a href="">Vendor</a><br>
         <a href="">Sale</a><br>
         <a href="">Customer</a><br>
         <a href="">Search</a><br>
