--- a/purchase.html
+++ b/purchase.html
@@ -21,8 +21,8 @@
         <ul>Welcome admin | Log Out</ul>
     </nav> -->
     <div class="list">
-        <a href="">Item</a><br>
-        <a href="purchase.html">Purchase</a><br>
+        <a href="item.html">Item</a><br>
+        <a href="">Purchase</a><br>
         <a href="vendor.html">Vendor</a><br>
         <a href="">Sale</a><br>
         <a href="">Customer</a><br>
