--- a/inventory.html
+++ b/inventory.html
@@ -13,7 +13,7 @@
         </div>
         <div class="welcome">
             Welcome admin | 
-            <button>  Log Out</button>
+            <button type="button">Log Out</button>
         </div>
     </div>
     <!-- <nav>
@@ -22,8 +22,8 @@
     </nav> -->
     <div class="list">
         <a href="item.html">Item</a><br>
-        <a href="">Purchase</a><br>
-        <a href="">Vendor</a><br>
+        <a href="purchase.html">Purchase</a><br>
+        <a href="vendor.html">Vendor</a><br>
         <a href="">Sale</a><br>
         <a href="">Customer</a><br>
         <a href="">Search</a><br>
