--- a/customer.html
+++ b/customer.html
@@ -25,9 +25,18 @@
         <a href="purchase.html">Purchase</a><br>
         <a href="vendor.html">Vendor</a><br>
         <a href="">Sale</a><br>
-        <a href="customer.html">Customer</a><br>
+        <a href="">Customer</a><br>
         <a href="">Search</a><br>
         <a href="" >Reports</a>
+    </div>
+    <div class="form_div">
+        <legend>
+            <form action="">
+                <label for="name">Username</label>
+                <input type="text" name="name" id="name">
+            </form>
+        </legend>
+        
     </div>
 </body>
 </html>
