--- a/vendor.html
+++ b/vendor.html
@@ -25,7 +25,7 @@
         <a href="purchase.html">Purchase</a><br>
         <a href="">Vendor</a><br>
         <a href="">Sale</a><br>
-        <a href="">Customer</a><br>
+        <a href="customer.html">Customer</a><br>
         <a href="">Search</a><br>
         <a href="" >Reports</a>
     </div>
